# OxideAudio

./: .gitignore  .log.txt  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
player/: Cargo.toml
player/src/: lib.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
