[profile.release]
opt-level = 3
codegen-units=16
lto = "fat"
panic = "unwind"
strip = "symbols"

[package]
name = "mscply"
version = "0.1.10"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
serde_json = "1"
libmpv2 = "5.0.2"
regex = "1.12.2"
