[profile.release]
opt-level = 3
codegen-units=16
lto = "thin"
panic = "unwind"
strip = "symbols"

[package]
name = "mscply"
version = "1.0.1"
edition = "2024"
description = "First stable release"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
serde_json = "1"
libmpv2 = "5.0.2"
regex = "1.12.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
uuid = { version = "1.0", features = ["v4"] } 
