[package]
name = "mscply"
version = "1.1.14"
edition = "2024"
description = "First stable release"

[dependencies]
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
  "rt-multi-thread"
]}
serde_json = "1"
libmpv2 = "5.0.2"
crossterm = "0.29.0"
macros = { path = "../macros" }
network = {path = "../network"}
ui = {path = "../ui"}
player = {path = "../player"}
