[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
  "rt-multi-thread"
]}
serde_json = {version = "1", default-features = false}
regex = { version = "1.12.2", default-features = false, features = ["std"] }
macros = { path = "../macros" }
uuid = { version = "1.0", features = ["v4"] }
