[package]
name = "network"
version = "1.0.7"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
  "rt-multi-thread"
]}
serde_json = {version = "1", default-features = false}
macros = { path = "../macros" }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5.8"
base64 = "0.22.1"
serde =  { version = "1.0.228", features = ["derive"] }
regex = "1.12.4"
