[package]
name = "player"
version = "1.0.5"
edition = "2024"

[dependencies]
macros = {path = "../macros"}
uuid = { version = "1.0", features = ["v4"] }
libmpv2 = "5.0.2"
serde_json = "1"
base64 = "0.22"
network = {path = "../network"}
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
  "rt-multi-thread"
]}
rand = "0.10.0"
