[package]
name = "player"
version = "1.0.6"
edition = "2024"

[dependencies]
macros = {path = "../macros"}
libmpv2 = "5.0.2"
serde_json = "1"
network = {path = "../network"}
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
  "rt-multi-thread"
]}
rand = "0.10.0"
regex = "1.12.4"
